<resources>
    <string name="app_name">MicroBoss</string>
    <string name="about_us">
        OUR VISION\n\n

        “Building human capacity
to enhance our global team
in evolving advancement through creative,
innovative and insightful development of new and efficient technologies,
strategies and infrastructure to provide hybrid solutions to varying client needs for human endeavor”.\n\n
        \nMISSION\n\n

“To provide Total IT Solutions across Africa and the International community, innovate cutting-edge and pragmatic solutions that deliver great value to the world, as we develop competent and accomplished professionals and expertise to support such services, and ensure that our client\'s experience is worry-free”.\n\n

        \nOUR CORE VALUES\n\n
        MicroBoss is a highly ethical company, which does business with speed, dedication, efficiency, proficiency and Integrity, conducting itself with high professional integrity and being socially responsible to its communities.
MicroBoss offer professional services delivered by highly qualified staff with extensive experience in prompt service delivery, development and management techniques to meet a wide variety of needs.
MicroBoss applies very detailed and strict project management standards and methodology during solution implementation. Our staff applies time proven, disciplined methodology to help clients implement Business Intelligence solutions quickly to achieve rapid measurable success. Our focus is to implement best practices with the ability to make every project phase fully transparent, cost effective and on schedule.\n\n

        \n#1 ICT SOLUTION PROVIDER IN AFRICA.\n\n

        MicroBoss Technologies is a premier technology solutions provider and value-added service company in Africa with focus on System Integration, Energy Services, Security Solutions, Control Automation, Customer Engagement Solutions, Collaborative Portals, Technology integration and Professional development. Our services include delivering high quality and cost- effective business automation products and solutions i.e EDMS, ERP, Document Digitization, Process Automation, Software and Web Applications for mid-sized and large-scale companies and global organizations.
We are a fast-paced global Information Technology Consulting firm with the aim to be a leading management and technology services organization and to satisfy the most advanced and demanding client needs in the African Sub-Region. We bring to the market, a combined strength that is a compelling proposition for businesses including - deep local expertise and presence aligned with a global footprint and resource bank, committed as a team to growing Nigeria\'s aspirations throughpeople,passionand technology.
\n\nWe build and deliver Enterprise grade solutions for a variety of corporate and business needs, deploying same over large territories or simple campus sites. SAP, SharePoint, Microsoft Dynamics to mention a few are some solutions we have great expertise working with. We equally offer mobile and web services to support video, voice, educational and entertainment content delivery globally to the satisfaction of our clients and customers, by combining our expertise in application technologies and service delivery with our network of relationship with telecom operators, advertising agencies, media organizations and other content providers. This enables us to develop innovative marketing, banking, entertainment, communications and other various business solutions to meet up with today\'s technological demand.
\n\nWe offer services to suit all types of customers ranging from those designed for organizations that are implementing performance management for the first time, to a knowledge transfer model for those who want to take greater immediate ownership of their solution. In each case, MicroBoss can help you utilize our multi-stage service, offering best practices process for implementation of customized scalable development amongst otherkeyprocesses.We also provide a product independent service which allows us to use tools that will suit the needs of the client and leverage on the clients existing infrastructure to
provide the optimal mix of services required based on their level of experience, availability of IT support and our clients budget. MicroBoss Technologies Limited was established in 2010 and registered in accordance with the Corporate Affairs Commission in Nigeria and has since being doing businesses with Small and medium businesses as well as Enterprise Organizations. Our operational headquarters is in Abuja-Nigeria.
\n\nWe are recognized partners of leading enterprise solution companies MicroSoft and SAP as well as technology providers of Dell/EMC and Intel. Our consultants and staff have the necessary technical, architectural, and project management skills to successfully implement any project we accept. We also can often accelerate the rate of implementation by utilizing prior project success and experience gained through similar engagements.\n\n\nFind out more by contacting us at;\nhello@microboss.org\nwww.microboss.org</string>
    <string name="BRONZE_package">Recognized partner \n• Gets brand featured in our event • Share live screen</string>
    <string name="BRONZE_package_full">Sponsor ribbons (on sponsor listing page) on our website and mobile app including banner ads.\n\n
        Agenda Highlights (place their logo or ads in the agenda for high visibility) asides downloadable PDFs of the company profile.
        \n\nLive display (shared screen with other sponsors)</string>
    <string name="SILVER_package">Brand website and product visibility \n• Recognized partner \n• Gets brand featured in our event \n• Share live screen</string>
    <string name="GOLD_package">Upgrade to Panelist \n• Brand website and product visibility \n• Recognized partner \n• Gets brand featured in our event \n• Share live screen</string>
    <string name="PLATINUM_package">Access to participants\' contacts \n• Upgrade to Panelist \n• Brand website and product visibility \n• Recognized as \'event partner\' \n•
        Gets brand featured in our event • Share live screen</string>
    <string name="DIAMOND_package">Brand on incentives \n• VIP Access \n• Co-sponsor access \n• Access to participants\' contacts \n• Upgrade to Panelist \n• Brand website and product visibility \n• Recognized as \'event partner\' •
        Gets brand featured in our event • Share live screen</string>
</resources>