<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:layout_marginBottom="20dp"
    tools:context=".SponsorPackages"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/packages_horizon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:fadeScrollbars="true"
        android:scrollbars="none"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/bronze_buck"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:background="@drawable/package_yellow_solid"
                android:weightSum="10"
                android:padding="5dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6">
                    <TextView
                        android:id="@+id/scrolla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BRONZE_package"
                        android:textSize="10.5sp"
                        android:textColor="#E8DED7"
                        android:gravity="center|bottom"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </ScrollView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="BRONZE"
                    android:textColor="#A3A09F"
                    android:gravity="center"
                    android:shadowColor="@color/black_tab"
                    android:shadowDy="-1"
                    android:shadowRadius="2"
                    android:shadowDx="0"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="₦200K"
                    android:textSize="11sp"
                    android:textColor="#9FCF92"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/silver_buck"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:background="@drawable/package_green_solid"
                android:weightSum="10"
                android:padding="5dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6">
                    <TextView
                        android:id="@+id/scrollb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SILVER_package"
                        android:textSize="10.5sp"
                        android:textColor="#E4E4E4"
                        android:gravity="center|bottom"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </ScrollView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="SILVER"
                    android:textColor="#AEAEAE"
                    android:gravity="center"
                    android:shadowColor="@color/black_tab"
                    android:shadowDy="-1"
                    android:shadowRadius="2"
                    android:shadowDx="0"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="₦300K"
                    android:textSize="11sp"
                    android:textColor="#9FCF92"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/gold_buck"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:background="@drawable/package_purple_solid"
                android:weightSum="10"
                android:padding="5dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6">
                    <TextView
                        android:id="@+id/scrollc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/GOLD_package"
                        android:textSize="10.5sp"
                        android:textColor="#C8BBD6"
                        android:gravity="center|bottom"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </ScrollView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="GOLD"
                    android:textColor="#AEAEAE"
                    android:gravity="center"
                    android:shadowColor="@color/black_tab"
                    android:shadowDy="-1"
                    android:shadowRadius="2"
                    android:shadowDx="0"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="₦500K"
                    android:textSize="11sp"
                    android:textColor="#9FCF92"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/platinum_buck"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:background="@drawable/package_red_solid"
                android:weightSum="10"
                android:padding="5dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6">
                    <TextView
                        android:id="@+id/scrolld"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10.5sp"
                        android:textColor="#D6BABA"
                        android:text="@string/PLATINUM_package"
                        android:gravity="center|bottom"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </ScrollView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="PLATINUM"
                    android:textColor="#AEAEAE"
                    android:gravity="center"
                    android:shadowColor="@color/black_tab"
                    android:shadowDy="-1"
                    android:shadowRadius="2"
                    android:shadowDx="0"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="₦1m"
                    android:textSize="11sp"
                    android:textColor="#9FCF92"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/diamond_buck"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:background="@drawable/package_blue_solid"
                android:weightSum="10"
                android:padding="5dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6">
                    <TextView
                        android:id="@+id/scrolle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10.5sp"
                        android:textColor="#BBB3B6D1"
                        android:text="@string/DIAMOND_package"
                        android:gravity="center|bottom"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"/>
                </ScrollView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="DIAMOND"
                    android:textColor="#AEAEAE"
                    android:gravity="center"
                    android:shadowColor="@color/black_tab"
                    android:shadowDy="-1"
                    android:shadowRadius="2"
                    android:shadowDx="0"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="₦1.5m"
                    android:textSize="11sp"
                    android:textColor="#9FCF92"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BRONZE_package_full"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"/>
</LinearLayout>